--- a/index.html
+++ b/index.html
@@ -4,111 +4,132 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
   <title>YAAD LIFE</title>
-  <script src="https://unpkg.com/@tonconnect/ui@latest/dist/tonconnect-ui.min.js"></script>
+  <script src="https://unpkg.com/@walletconnect/modal@2"></script>
   <style>
-    :root {--gold:#FFD700;--dark:#0F1620;--green:#00C853;--bg:#000}
+    :root{--gold:#FFD700;--green:#009B48;--black:#000;--dark:#0a0a0a}
     *{margin:0;padding:0;box-sizing:border-box}
-    body{background:var(--bg);color:#fff;font-family:system-ui,min-height:100dvh;display:flex;flex-direction:column;padding:env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left)}
-    .c{flex:1;padding:2rem 1rem;text-align:center}
-    h1{font-size:4.8rem;font-weight:900;background:linear-gradient(var(--gold),#FFEDAB);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
-    .btn{width:90%;max-width:440px;margin:1rem auto;padding:1.4rem;border-radius:16px;font-size:1.5rem;font-weight:800;border:none;cursor:pointer;box-shadow:0 8px 25px rgba(0,0,0,0.6);transition:.3s}
-    .gold{background:var(--gold);color:var(--dark)}
-    .dark{background:var(--dark);color:var(--gold)}
-    .green{background:var(--green);color:#fff}
+    body{background:url('https://yaadlife.booorldwide.com/cdn/moonrise-montego.jpg') center/cover fixed; color:#fff; font-family:system-ui; min-height:100dvh; display:flex; flex-direction:column}
+    .overlay{position:fixed; inset:0; background:rgba(0,0,0,0.78); backdrop-filter:blur(2px)}
+    .c{position:relative; z-index:2; flex:1; padding:2rem 1rem 4rem; text-align:center}
+    h1{font-size:clamp(4.5rem,12vw,8rem); font-weight:900; background:linear-gradient(var(--gold),#FFEDAB); -webkit-background-clip:text; -webkit-text-fill-color:transparent; margin:2rem 0}
+    .tagline{font-size:1.4rem; opacity:0.9; margin-bottom:2rem}
+    .btn{width:92%; max-width:460px; margin:1rem auto; padding:1.6rem; border-radius:20px; font-size:1.8rem; font-weight:900; border:none; cursor:pointer; box-shadow:0 12px 35px rgba(0,0,0,0.7); transition:.3s}
+    .gold{background:var(--gold); color:var(--black)}
+    .dark{background:var(--dark); color:var(--gold)}
+    .green{background:var(--green); color:#fff; border:4px solid var(--gold)}
     .hidden{display:none}
-    .panel{background:rgba(255,255,255,0.08);padding:1.5rem;border-radius:16px;margin:1.5rem 0}
-    .num{display:inline-block;width:60px;height:60px;line-height:60px;font-size:2rem;background:var(--dark);color:var(--gold);border-radius:50%;margin:0 12px}
-    .stay{background:rgba(255,215,0,0.15);padding:1rem;margin:1rem;border-radius:12px}
+    .panel{background:rgba(0,155,72,0.96); border:4px solid var(--gold); padding:1.6rem; border-radius:24px; margin:1.5rem auto; max-width:420px; font-size:1.4rem}
+    .num{width:72px; height:72px; line-height:72px; font-size:2.5rem; background:var(--dark); color:var(--gold); border-radius:50%; display:inline-block; margin:0 15px}
+    .stay{background:var(--green); border:4px solid var(--gold); padding:1.3rem; margin:1rem; border-radius:16px; color:#fff; font-weight:900}
   </style>
 </head>
 <body>
+<div class="overlay"></div>
 <div class="c">
   <h1>YAAD<br>LIFE</h1>
-  <p>One Love. One Calendar. Full Jamaica.</p>
+  <p class="tagline">One Love. One Calendar. Full Jamaica.</p>
 
+  <!-- PERSON CALCULATOR – COMPACT & PATOIS -->
   <div id="profilePanel" class="panel">
-    <h2>How many in your Yaad?</h2>
+    <h2>How Much a Go?</h2>
     <div style="margin:2rem 0">
-      <div>Adults (13+) <button onclick="adj('a',-1)">−</button><span id="a" class="num">1</span><button onclick="adj('a',1)">+</button></div>
-      <div style="margin:1rem 0">Children (3–12) <button onclick="adj('c',-1)">−</button><span id="c" class="num">0</span><button onclick="adj('c',1)">+</button></div>
-      <div>Infants (0–2) <button onclick="adj('i',-1)">−</button><span id="i" class="num">0</span><button onclick="adj('i',1)">+</button></div>
+      <div>Big People (13+) <button onclick="adj('a',-1)">−</button><span id="a" class="num">1</span><button onclick="adj('a',1)">+</button></div>
+      <div style="margin:1rem 0">Pickney (3–12) <button onclick="adj('c',-1)">−</button><span id="c" class="num">0</button><button onclick="adj('c',1)">+</button></div>
+      <div>Baby (0–2) <button onclick="adj('i',-1)">−</button><span id="i" class="num">0</span><button onclick="adj('i',1)">+</button></div>
     </div>
     <p>Pets? <select id="pets"><option>No</option><option>Dog</option><option>Cat</option><option>Both</option></select></p>
-    <p><label><input type="checkbox" id="child"> Child-friendly only</label><br>
+    <p><label><input type="checkbox" id="child"> Pickney-friendly only</label><br>
        <label><input type="checkbox" id="pet"> Pet-friendly only</label></p>
-    <button class="btn gold" onclick="saveProfile()">LOCK IN & BOOK YAAD</button>
+    <button class="btn gold" onclick="saveProfile()">BOOK YAAD</button>
   </div>
 
   <div id="journey"></div>
 
   <button id="primary" class="btn gold">BOOK YAAD</button>
-  <button id="mint" class="btn dark">Konnet Yaad + MINT</button>
-  <button id="add" class="btn green hidden">Add Another Stay</button>
+  <button id="mint" class="btn dark">Konnet to Yaad + MINT</button>
+  <button id="add" class="btn green hidden">Next Yaad?</button>
 </div>
 
 <script>
   let traveller = {a:1,c:0,i:0,pets:"No",child:false,pet:false};
   let stays = [], stage = 0;
-  const stages = ["stay","transport","activities","food","review"];
-  const labels = {stay:"Next: Transport",transport:"Next: Activities",activities:"Next: Food & Vibes",food:"Next: Review Trip",review:"BOOK YAAD & PAY"};
+  const stages = ["stay","drive","activities","food","vybes"];
+  const labels = {
+    stay: "Look Drive?",
+    drive: "Wa yuh a go do?",
+    activities: "Nyammin’s",
+    food: "Vybes",
+    vybes: "PAY FI DI YAAD"
+  };
 
-  const primary = document.getElementById("primary");
-  const mint = document.getElementById("mint");
-  const add = document.getElementById("add");
-  const journey = document.getElementById("journey");
-  const profilePanel = document.getElementById("profilePanel");
+  // Smart location names – tourist vs local
+  const isLocal = localStorage.getItem("yaadMode") === "true";
+  const locations = isLocal ? {
+    "Montego Bay (MoBay)":"St. James","Ocho Rios (Ochi)":"St. Ann","Negril & West End":"Westmoreland",
+    "Port Antonio (Portie)":"Portland","Kingston (Town)":"Kingston","Portmore / Spain":"St. Catherine"
+  } : {
+    "Montego Bay":"St. James","Ocho Rios":"St. Ann","Negril":"Westmoreland",
+    "Port Antonio":"Portland","Kingston":"Kingston","Portmore":"St. Catherine"
+  };
 
-  function adj(type, delta) {
-    if (type==='a' && traveller.a+delta>=1 || type!=='a' && traveller.a+delta>=0) {
-      traveller[type] += delta;
-      document.getElementById(type).textContent = traveller[c] || 0;
+  function adj(t,d){
+    if(t==='a'?traveller.a+d>=1:traveller[t]+d>=0){
+      traveller[t]+=d;
+      document.getElementById(t).textContent=traveller[t];
     }
   }
 
-  function saveProfile() {
-    traveller.child = document.getElementById("child").checked;
-    traveller.pet = document.getElementById("pet").checked;
-    traveller.pets = document.getElementById("pets").value;
-    profilePanel.classList.add("hidden");
-    primary.textContent = "Next: Transport";
-    add.classList.remove("hidden");
+  function saveProfile(){
+    traveller.child=document.getElementById("child").checked;
+    traveller.pet=document.getElementById("pet").checked;
+    traveller.pets=document.getElementById("pets").value;
+    localStorage.setItem("yaadMode","true");
+    document.getElementById("profilePanel").classList.add("hidden");
+    document.getElementById("primary").textContent = "Look Drive?";
+    document.getElementById("add").classList.remove("hidden");
     update();
   }
 
-  function calcPrice(base) {
-    let p = base;
-    if (traveller.a > 2) p += 45 * (traveller.a - 2);
-    if (traveller.c > 0) p += 20 * traveller.c;
-    if (traveller.pets!=="No" && traveller.pet) p += 45;
-    return p.toFixed(0);
+  function calcPrice(base){
+    let p=base;
+    if(traveller.a>2) p+=45*(traveller.a-2);
+    if(traveller.c>0) p+=20*traveller.c;
+    if(traveller.pets!=="No") p+=50;
+    return p;
   }
 
-  function update() {
-    journey.innerHTML = stays.map(s=>`<div class="stay">${s}</div>`).join("");
-    if (stays.length===0) { primary.textContent = "BOOK YAAD"; add.classList.add("hidden"); }
-    else { primary.textContent = labels[stages[stage]] || "BOOK YAAD & PAY"; }
+  function update(){
+    document.getElementById("journey").innerHTML = stays.map(s=>`<div class="stay">${s}</div>`).join("");
+    document.getElementById("primary").textContent = stays.length===0 ? "BOOK YAAD" : (labels[stages[stage]] || "PAY FI DI YAAD");
   }
 
-  primary.onclick = () => {
-    if (stays.length===0) { stays.push(`Jamaica Pegasus • Kingston • 3 nights • $${calcPrice(280)} USD`); }
-    else if (stage < 4) {
+  document.getElementById("primary").onclick = () => {
+    if(stays.length===0){
+      stays.push(`Jamaica Pegasus • Town • 3 nights • $${calcPrice(280)} USD`);
+    } else if(stage<4){
       stage++;
-      const mock = ["Private Van (fits "+(traveller.a+traveller.c)+" + pets)","Dunn’s River (family package)","Scotchie’s Jerk (child seats available)"];
-      stays.push(mock[stage-1] || "Added");
+      const mock = [
+        `Private Van (fits ${traveller.a+traveller.c}${traveller.pets!=="No"?" + pets":""})`,
+        "Dunn’s River (family package)",
+        "Scotchie’s Jerk (pickney seats)",
+        "Rick’s Café Sunset Vybes"
+      ];
+      stays.push(mock[stage-1]);
     } else {
-      primary.textContent = "BOOK YAAD & PAY → $"+stays.reduce((a,s)=>a+(+s.match(/\d+/g)?.[0]||0),0)+" USD";
+      const total = stays.reduce((a,s)=>a+(+s.match(/\d+/)||[0])[0],0);
+      document.getElementById("primary").textContent = `PAY FI DI YAAD → $${total} USD`;
     }
     update();
   };
 
-  add.onclick = () => { stays.push(`Extra stay • $${calcPrice(220)} USD`); update(); };
-
-  // TON Connect
-  const tc = new TON_CONNECT_UI.TonConnectUI({manifestUrl:"https://yaadlife.github.io/ton-manifest.json"});
-  mint.onclick = async () => {
-    if (!tc.connected) await tc.openModal();
-    else { alert("Lifetime Yaad SBT Minted!"); mint.textContent = "Minted Forever"; mint.disabled=true; }
+  document.getElementById("add").onclick = () => {
+    stays.push(`Next Yaad • $${calcPrice(220)} USD`);
+    update();
   };
+
+  // WalletConnect v2
+  const wc = new WalletConnect.Modal({projectId: "YOUR_PROJECT_ID_HERE"}); // ← replace with real ID before shrink
+  document.getElementById("mint").onclick = () => wc.open();
 
   update();
 </script>
