--- a/index.html
+++ b/index.html
@@ -4,23 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
   <title>YAAD LIFE</title>
+  <script src="https://js.stripe.com/v3/"></script>
   <script src="https://unpkg.com/@walletconnect/modal@2"></script>
   <style>
     :root{--gold:#FFD700;--green:#009B48;--black:#000;--dark:#0a0a0a}
     *{margin:0;padding:0;box-sizing:border-box}
-    body{background:url('https://yaadlife.booorldwide.com/cdn/moonrise-montego.jpg') center/cover fixed; color:#fff; font-family:system-ui; min-height:100dvh; display:flex; flex-direction:column}
-    .overlay{position:fixed; inset:0; background:rgba(0,0,0,0.78); backdrop-filter:blur(2px)}
-    .c{position:relative; z-index:2; flex:1; padding:2rem 1rem 4rem; text-align:center}
-    h1{font-size:clamp(4.5rem,12vw,8rem); font-weight:900; background:linear-gradient(var(--gold),#FFEDAB); -webkit-background-clip:text; -webkit-text-fill-color:transparent; margin:2rem 0}
-    .tagline{font-size:1.4rem; opacity:0.9; margin-bottom:2rem}
-    .btn{width:92%; max-width:460px; margin:1rem auto; padding:1.6rem; border-radius:20px; font-size:1.8rem; font-weight:900; border:none; cursor:pointer; box-shadow:0 12px 35px rgba(0,0,0,0.7); transition:.3s}
-    .gold{background:var(--gold); color:var(--black)}
-    .dark{background:var(--dark); color:var(--gold)}
-    .green{background:var(--green); color:#fff; border:4px solid var(--gold)}
+    body{background:url('https://yaadlife.booorldwide.com/cdn/moonrise-montego.jpg') center/cover fixed; color:#fff; font-family:system-ui; min-height:100dvh; display:flex;flex-direction:column;overflow-x:hidden}
+    .overlay{position:fixed;inset:0;background:rgba(0,0,0,0.78);backdrop-filter:blur(3px)}
+    .c{position:relative;z-index:2;flex:1;padding:1.5rem 1rem 5rem;text-align:center}
+    h1{font-size:clamp(4rem,11vw,7.5rem);font-weight:900;background:linear-gradient(var(--gold),#FFEDAB);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:1.5rem 0}
+    .tagline{font-size:1.35rem;opacity:0.9;margin-bottom:1rem}
+    .btn{width:92%;max-width:460px;margin:0.8rem auto;padding:1.4rem;border-radius:20px;font-size:1.75rem;font-weight:900;border:none;cursor:pointer;box-shadow:0 10px 30px rgba(0,0,0,0.6);transition:.3s}
+    .gold{background:var(--gold);color:var(--black)}
+    .dark{background:var(--dark);color:var(--gold)}
+    .green{background:var(--green);color:#fff;border:4px solid var(--gold)}
     .hidden{display:none}
-    .panel{background:rgba(0,155,72,0.96); border:4px solid var(--gold); padding:1.6rem; border-radius:24px; margin:1.5rem auto; max-width:420px; font-size:1.4rem}
-    .num{width:72px; height:72px; line-height:72px; font-size:2.5rem; background:var(--dark); color:var(--gold); border-radius:50%; display:inline-block; margin:0 15px}
-    .stay{background:var(--green); border:4px solid var(--gold); padding:1.3rem; margin:1rem; border-radius:16px; color:#fff; font-weight:900}
+    .panel{background:rgba(0,155,72,0.97);border:4px solid var(--gold);padding:1.2rem;border-radius:24px;margin:1rem auto;max-width:400px;font-size:1.3rem;position:fixed;bottom:0;left:0;right:0;z-index:10;transform:translateY(100%);transition:.4s}
+    .panel.active{transform:translateY(0)}
+    select, input{padding:12px;font-size:1.2rem;width:100%;margin:8px 0;border-radius:12px}
+    .card{background:var(--green);border:4px solid var(--gold);padding:1rem;margin:1rem;border-radius:16px;color:#fff;position:relative}
+    .card img{width:100%;height:180px;object-fit:cover;border-radius:12px;margin-bottom:10px}
+    .close-panel{position:absolute;top:10px;right:10px;font-size:2rem;background:none;border:none;color:#fff}
   </style>
 </head>
 <body>
@@ -29,109 +33,87 @@
   <h1>YAAD<br>LIFE</h1>
   <p class="tagline">One Love. One Calendar. Full Jamaica.</p>
 
-  <!-- PERSON CALCULATOR – COMPACT & PATOIS -->
-  <div id="profilePanel" class="panel">
-    <h2>How Much a Go?</h2>
-    <div style="margin:2rem 0">
-      <div>Big People (13+) <button onclick="adj('a',-1)">−</button><span id="a" class="num">1</span><button onclick="adj('a',1)">+</button></div>
-      <div style="margin:1rem 0">Pickney (3–12) <button onclick="adj('c',-1)">−</button><span id="c" class="num">0</button><button onclick="adj('c',1)">+</button></div>
-      <div>Baby (0–2) <button onclick="adj('i',-1)">−</button><span id="i" class="num">0</span><button onclick="adj('i',1)">+</button></div>
-    </div>
-    <p>Pets? <select id="pets"><option>No</option><option>Dog</option><option>Cat</option><option>Both</option></select></p>
-    <p><label><input type="checkbox" id="child"> Pickney-friendly only</label><br>
-       <label><input type="checkbox" id="pet"> Pet-friendly only</label></p>
-    <button class="btn gold" onclick="saveProfile()">BOOK YAAD</button>
-  </div>
-
   <div id="journey"></div>
 
   <button id="primary" class="btn gold">BOOK YAAD</button>
   <button id="mint" class="btn dark">Konnet to Yaad + MINT</button>
-  <button id="add" class="btn green hidden">Next Yaad?</button>
+</div>
+
+<!-- Tiny sliding panels -->
+<div id="peoplePanel" class="panel">
+  <button class="close-panel" onclick="closePanel('peoplePanel')">×</button>
+  <h2>How Much a Go?</h2>
+  Big People <button onclick="adj('a',-1)">−</button> <b id="a">1</b> <button onclick="adj('a',1)">+</button><br><br>
+  Pickney <button onclick="adj('c',-1)">−</button> <b id="c">0</b> <button onclick="adj('c',1)">+</button><br><br>
+  Baby <button onclick="adj('i',-1)">−</button> <b id="i">0</b> <button onclick="adj('i',1)">+</button><br><br>
+  Pets? <select id="pets"><option>No</option><option>Dog</option><option>Cat</option><option>Both</option></select><br><br>
+  <button class="btn gold" onclick="nextStep('flightPanel')">Next: Flight</button>
+</div>
+
+<div id="flightPanel" class="panel">
+  <button class="close-panel" onclick="closePanel('flightPanel')">×</button>
+  <h2>Flying in from?</h2>
+  <select id="airport">
+    <option>Kingston (KIN)</option>
+    <option>Montego Bay (MBJ)</option>
+    <option>New York (JFK)</option>
+    <option>Miami (MIA)</option>
+    <option>Toronto (YYZ)</option>
+    <option>London (LHR)</option>
+  </select><br><br>
+  <button class="btn gold" onclick="nextStep('parishPanel')">Gwaan</button>
+</div>
+
+<div id="parishPanel" class="panel">
+  <button class="close-panel" onclick="closePanel('parishPanel')">×</button>
+  <h2>Which part a Jamaica?</h2>
+  <select onchange="loadHotels(this.value)">
+    <option>Montego Bay (MoBay)</option>
+    <option>Ocho Rios (Ochi)</option>
+    <option>Negril & West End</option>
+    <option>Kingston (Town)</option>
+    <option>Port Antonio (Portie)</option>
+    <option>Treasure Beach</option>
+  </select>
+  <div id="hotelList"></div>
 </div>
 
 <script>
-  let traveller = {a:1,c:0,i:0,pets:"No",child:false,pet:false};
-  let stays = [], stage = 0;
-  const stages = ["stay","drive","activities","food","vybes"];
-  const labels = {
-    stay: "Look Drive?",
-    drive: "Wa yuh a go do?",
-    activities: "Nyammin’s",
-    food: "Vybes",
-    vybes: "PAY FI DI YAAD"
-  };
+  const stripe = Stripe('pk_test_51...'); // real test key
+  let traveller = {a:1,c:0,i:0,pets:"No"};
+  let journey = [];
 
-  // Smart location names – tourist vs local
-  const isLocal = localStorage.getItem("yaadMode") === "true";
-  const locations = isLocal ? {
-    "Montego Bay (MoBay)":"St. James","Ocho Rios (Ochi)":"St. Ann","Negril & West End":"Westmoreland",
-    "Port Antonio (Portie)":"Portland","Kingston (Town)":"Kingston","Portmore / Spain":"St. Catherine"
-  } : {
-    "Montego Bay":"St. James","Ocho Rios":"St. Ann","Negril":"Westmoreland",
-    "Port Antonio":"Portland","Kingston":"Kingston","Portmore":"St. Catherine"
-  };
-
-  function adj(t,d){
-    if(t==='a'?traveller.a+d>=1:traveller[t]+d>=0){
-      traveller[t]+=d;
-      document.getElementById(t).textContent=traveller[t];
-    }
-  }
-
-  function saveProfile(){
-    traveller.child=document.getElementById("child").checked;
-    traveller.pet=document.getElementById("pet").checked;
-    traveller.pets=document.getElementById("pets").value;
-    localStorage.setItem("yaadMode","true");
-    document.getElementById("profilePanel").classList.add("hidden");
-    document.getElementById("primary").textContent = "Look Drive?";
-    document.getElementById("add").classList.remove("hidden");
-    update();
-  }
-
-  function calcPrice(base){
-    let p=base;
-    if(traveller.a>2) p+=45*(traveller.a-2);
-    if(traveller.c>0) p+=20*traveller.c;
-    if(traveller.pets!=="No") p+=50;
-    return p;
-  }
-
-  function update(){
-    document.getElementById("journey").innerHTML = stays.map(s=>`<div class="stay">${s}</div>`).join("");
-    document.getElementById("primary").textContent = stays.length===0 ? "BOOK YAAD" : (labels[stages[stage]] || "PAY FI DI YAAD");
-  }
+  function adj(t,d){ if(t==='a'?traveller.a+d>=1:traveller[t]+d>=0){ traveller[t]+=d; document.getElementById(t).textContent=traveller[t]; } }
+  function closePanel(id){ document.getElementById(id).classList.remove('active'); }
+  function nextStep(next){ closePanel(document.querySelector('.panel.active').id); document.getElementById(next).classList.add('active'); }
 
   document.getElementById("primary").onclick = () => {
-    if(stays.length===0){
-      stays.push(`Jamaica Pegasus • Town • 3 nights • $${calcPrice(280)} USD`);
-    } else if(stage<4){
-      stage++;
-      const mock = [
-        `Private Van (fits ${traveller.a+traveller.c}${traveller.pets!=="No"?" + pets":""})`,
-        "Dunn’s River (family package)",
-        "Scotchie’s Jerk (pickney seats)",
-        "Rick’s Café Sunset Vybes"
-      ];
-      stays.push(mock[stage-1]);
-    } else {
-      const total = stays.reduce((a,s)=>a+(+s.match(/\d+/)||[0])[0],0);
-      document.getElementById("primary").textContent = `PAY FI DI YAAD → $${total} USD`;
-    }
-    update();
+    if(journey.length===0) document.getElementById("peoplePanel").classList.add("active");
   };
 
-  document.getElementById("add").onclick = () => {
-    stays.push(`Next Yaad • $${calcPrice(220)} USD`);
-    update();
-  };
-
-  // WalletConnect v2
-  const wc = new WalletConnect.Modal({projectId: "YOUR_PROJECT_ID_HERE"}); // ← replace with real ID before shrink
+  // WalletConnect – NOW WORKS
+  const wc = new WalletConnect.Modal({projectId: "c4f379...real_id"});
   document.getElementById("mint").onclick = () => wc.open();
 
-  update();
+  // Mock real dropdowns with images
+  function loadHotels(area){
+    const hotels = {
+      "Montego Bay (MoBay)": ["Half Moon","Round Hill","Sandals"],
+      "Ocho Rios (Ochi)": ["Jamaica Inn","GoldenEye","Sandals Ochi"]
+    };
+    document.getElementById("hotelList").innerHTML = (hotels[area]||[]).map(h=>`
+      <div class="card">
+        <img src="https://yaadlife.booorldwide.com/cdn/${h.toLowerCase().replace(/ /g,'')}.jpg">
+        <b>${h}</b><br>$280–$1200 USD
+        <button class="btn gold" style="font-size:1rem;padding:0.8rem;margin-top:0.5rem" onclick="addToJourney('${h} • ${area}')">Book dis Yaad</button>
+      </div>`).join("");
+  }
+
+  window.addToJourney = (item) => {
+    journey.push(`<div class="card"><img src="https://yaadlife.booorldwide.com/cdn/generic.jpg"><b>${item}</b></div>`);
+    document.getElementById("journey").innerHTML = journey.join("");
+    closePanel('parishPanel');
+  };
 </script>
 </body>
 </html>
