--- a/index.html
+++ b/index.html
@@ -4,116 +4,133 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
   <title>YAAD LIFE</title>
-  <script src="https://js.stripe.com/v3/"></script>
   <script src="https://unpkg.com/@walletconnect/modal@2"></script>
   <style>
     :root{--gold:#FFD700;--green:#009B48;--black:#000;--dark:#0a0a0a}
     *{margin:0;padding:0;box-sizing:border-box}
-    body{background:url('https://yaadlife.booorldwide.com/cdn/moonrise-montego.jpg') center/cover fixed; color:#fff; font-family:system-ui; min-height:100dvh; display:flex;flex-direction:column;overflow-x:hidden}
+    body{background:url('https://yaadlife.booorldwide.com/cdn/moonrise-montego.jpg') center/cover fixed;color:#fff;font-family:-apple-system,system-ui,sans-serif;min-height:100dvh;display:flex;flex-direction:column;overflow:hidden}
     .overlay{position:fixed;inset:0;background:rgba(0,0,0,0.78);backdrop-filter:blur(3px)}
-    .c{position:relative;z-index:2;flex:1;padding:1.5rem 1rem 5rem;text-align:center}
-    h1{font-size:clamp(4rem,11vw,7.5rem);font-weight:900;background:linear-gradient(var(--gold),#FFEDAB);-webkit-background-clip:text;-webkit-text-fill-color:transparent;margin:1.5rem 0}
-    .tagline{font-size:1.35rem;opacity:0.9;margin-bottom:1rem}
-    .btn{width:92%;max-width:460px;margin:0.8rem auto;padding:1.4rem;border-radius:20px;font-size:1.75rem;font-weight:900;border:none;cursor:pointer;box-shadow:0 10px 30px rgba(0,0,0,0.6);transition:.3s}
+    .c{position:relative;z-index:2;flex:1;display:flex;flex-direction:column;justify-content:center;align-items:center;padding:env(safe-area-inset-top) 1rem env(safe-area-inset-bottom)}
+    h1{font-size:clamp(4.8rem,13vw,9rem);font-weight:900;background:linear-gradient(var(--gold),#FFEDAB);-webkit-background-clip:text;-webkit-text-fill-color:transparent;line-height:1;letter-spacing:-2px}
+    .motto{font-size:1.6rem;font-weight:600;opacity:0.92;margin:2rem 0 4rem;letter-spacing:1px}
+    .btn{width:88dvw;max-width:380px;margin:1.6rem auto;padding:1.7rem 1rem;border-radius:22px;font-size:1.9rem;font-weight:900;border:none;cursor:pointer;box-shadow:0 14px 40px rgba(0,0,0,0.6);transition:all .2s}
     .gold{background:var(--gold);color:var(--black)}
     .dark{background:var(--dark);color:var(--gold)}
     .green{background:var(--green);color:#fff;border:4px solid var(--gold)}
+    .btn:active{transform:scale(0.96)}
+    #journey{margin-top:2rem;width:100%;max-width:420px}
+    .stay{background:var(--green);border:4px solid var(--gold);padding:1.3rem;margin:1rem;border-radius:16px;color:#fff;font-weight:900;font-size:1.4rem;position:relative;overflow:hidden}
+    .stay img{width:100%;height:140px;object-fit:cover;border-radius:12px;margin-bottom:8px;opacity:0.92}
     .hidden{display:none}
-    .panel{background:rgba(0,155,72,0.97);border:4px solid var(--gold);padding:1.2rem;border-radius:24px;margin:1rem auto;max-width:400px;font-size:1.3rem;position:fixed;bottom:0;left:0;right:0;z-index:10;transform:translateY(100%);transition:.4s}
+    .panel{position:fixed;bottom:0;left:0;right:0;background:rgba(0,155,72,0.98);border-top:4px solid var(--gold);padding:1.4rem 1.2rem 2rem;border-radius:28px 28px 0 0;z-index:20;transform:translateY(100%);transition:transform .35s cubic-bezier(0.22,1,0.36,1)}
     .panel.active{transform:translateY(0)}
-    select, input{padding:12px;font-size:1.2rem;width:100%;margin:8px 0;border-radius:12px}
-    .card{background:var(--green);border:4px solid var(--gold);padding:1rem;margin:1rem;border-radius:16px;color:#fff;position:relative}
-    .card img{width:100%;height:180px;object-fit:cover;border-radius:12px;margin-bottom:10px}
-    .close-panel{position:absolute;top:10px;right:10px;font-size:2rem;background:none;border:none;color:#fff}
+    .close{float:right;font-size:2.2rem;background:none;border:none;color:#fff;cursor:pointer}
+    .num{width:68px;height:68px;line-height:68px;font-size:2.4rem;background:var(--dark);color:var(--gold);border-radius:50%;display:inline-block;margin:0 12px}
+    select{padding:12px;font-size:1.3rem;border-radius:12px;width:100%;margin:10px 0}
   </style>
 </head>
 <body>
-<div class="overlay"></div>
-<div class="c">
-  <h1>YAAD<br>LIFE</h1>
-  <p class="tagline">One Love. One Calendar. Full Jamaica.</p>
+  <div class="overlay"></div>
+  <div class="c">
+    <h1>YAAD<br>LIFE</h1>
+    <p class="motto">One Love One Jamaica</p>
 
-  <div id="journey"></div>
+    <div id="journey"></div>
 
-  <button id="primary" class="btn gold">BOOK YAAD</button>
-  <button id="mint" class="btn dark">Konnet to Yaad + MINT</button>
-</div>
+    <button id="primary" class="btn gold">BOOK YAAD</button>
+    <button id="mint" class="btn dark">Konnet to Yaad + MINT</button>
+    <button id="add" class="btn green hidden">Next Yaad?</button>
+  </div>
 
-<!-- Tiny sliding panels -->
-<div id="peoplePanel" class="panel">
-  <button class="close-panel" onclick="closePanel('peoplePanel')">×</button>
-  <h2>How Much a Go?</h2>
-  Big People <button onclick="adj('a',-1)">−</button> <b id="a">1</b> <button onclick="adj('a',1)">+</button><br><br>
-  Pickney <button onclick="adj('c',-1)">−</button> <b id="c">0</b> <button onclick="adj('c',1)">+</button><br><br>
-  Baby <button onclick="adj('i',-1)">−</button> <b id="i">0</b> <button onclick="adj('i',1)">+</button><br><br>
-  Pets? <select id="pets"><option>No</option><option>Dog</option><option>Cat</option><option>Both</option></select><br><br>
-  <button class="btn gold" onclick="nextStep('flightPanel')">Next: Flight</button>
-</div>
-
-<div id="flightPanel" class="panel">
-  <button class="close-panel" onclick="closePanel('flightPanel')">×</button>
-  <h2>Flying in from?</h2>
-  <select id="airport">
-    <option>Kingston (KIN)</option>
-    <option>Montego Bay (MBJ)</option>
-    <option>New York (JFK)</option>
-    <option>Miami (MIA)</option>
-    <option>Toronto (YYZ)</option>
-    <option>London (LHR)</option>
-  </select><br><br>
-  <button class="btn gold" onclick="nextStep('parishPanel')">Gwaan</button>
-</div>
-
-<div id="parishPanel" class="panel">
-  <button class="close-panel" onclick="closePanel('parishPanel')">×</button>
-  <h2>Which part a Jamaica?</h2>
-  <select onchange="loadHotels(this.value)">
-    <option>Montego Bay (MoBay)</option>
-    <option>Ocho Rios (Ochi)</option>
-    <option>Negril & West End</option>
-    <option>Kingston (Town)</option>
-    <option>Port Antonio (Portie)</option>
-    <option>Treasure Beach</option>
-  </select>
-  <div id="hotelList"></div>
-</div>
+  <!-- Minimal floating panel – How Much a Go? -->
+  <div id="peoplePanel" class="panel">
+    <button class="close" onclick="document.getElementById('peoplePanel').classList.remove('active')">×</button>
+    <h2 style="font-size:1.8rem;margin-bottom:1rem">How Much a Go?</h2>
+    <div style="text-align:center">
+      Big People − <button onclick="adj('a',-1)">−</button> <b id="a" class="num">1</b> <button onclick="adj('a',1)">+</button><br><br>
+      Pickney − <button onclick="adj('c',-1)">−</button> <b id="c" class="num">0</b> <button onclick="adj('c',1)">+</button><br><br>
+      Baby − <button onclick="adj('i',-1)">−</button> <b id="i" class="num">0</b> <button onclick="adj('i',1)">+</button><br><br>
+      <select id="pets"><option>No</option><option>Dog</option><option>Cat</option><option>Both</option></select>
+    </div>
+    <button class="btn gold" style="margin-top:1.5rem" onclick="savePeople()">LOCK IN & BOOK</button>
+  </div>
 
 <script>
-  const stripe = Stripe('pk_test_51...'); // real test key
   let traveller = {a:1,c:0,i:0,pets:"No"};
-  let journey = [];
+  let stays = [], stage = 0;
+  const stages = ["stay","drive","activities","food","vybes"];
+  const labels = {stay:"Look Drive?",drive:"Wa yuh a go do?",activities:"Nyammin’s",food:"Vybes",vybes:"PAY FI DI YAAD"};
 
-  function adj(t,d){ if(t==='a'?traveller.a+d>=1:traveller[t]+d>=0){ traveller[t]+=d; document.getElementById(t).textContent=traveller[t]; } }
-  function closePanel(id){ document.getElementById(id).classList.remove('active'); }
-  function nextStep(next){ closePanel(document.querySelector('.panel.active').id); document.getElementById(next).classList.add('active'); }
+  const primary = document.getElementById("primary");
+  const add = document.getElementById("add");
+  const journey = document.getElementById("journey");
 
-  document.getElementById("primary").onclick = () => {
-    if(journey.length===0) document.getElementById("peoplePanel").classList.add("active");
-  };
-
-  // WalletConnect – NOW WORKS
-  const wc = new WalletConnect.Modal({projectId: "c4f379...real_id"});
-  document.getElementById("mint").onclick = () => wc.open();
-
-  // Mock real dropdowns with images
-  function loadHotels(area){
-    const hotels = {
-      "Montego Bay (MoBay)": ["Half Moon","Round Hill","Sandals"],
-      "Ocho Rios (Ochi)": ["Jamaica Inn","GoldenEye","Sandals Ochi"]
-    };
-    document.getElementById("hotelList").innerHTML = (hotels[area]||[]).map(h=>`
-      <div class="card">
-        <img src="https://yaadlife.booorldwide.com/cdn/${h.toLowerCase().replace(/ /g,'')}.jpg">
-        <b>${h}</b><br>$280–$1200 USD
-        <button class="btn gold" style="font-size:1rem;padding:0.8rem;margin-top:0.5rem" onclick="addToJourney('${h} • ${area}')">Book dis Yaad</button>
-      </div>`).join("");
+  function adj(t,d){
+    if(t==='a'?traveller.a+d>=1:traveller[t]+d>=0){
+      traveller[t]+=d;
+      document.getElementById(t).textContent=traveller[t];
+    }
   }
 
-  window.addToJourney = (item) => {
-    journey.push(`<div class="card"><img src="https://yaadlife.booorldwide.com/cdn/generic.jpg"><b>${item}</b></div>`);
-    document.getElementById("journey").innerHTML = journey.join("");
-    closePanel('parishPanel');
+  function savePeople(){
+    traveller.pets = document.getElementById("pets").value;
+    document.getElementById("peoplePanel").classList.remove("active");
+    primary.textContent = "Look Drive?";
+    add.classList.remove("hidden");
+    update();
+  }
+
+  function calcPrice(base){
+    let p = base;
+    if(traveller.a>2) p += 45*(traveller.a-2);
+    if(traveller.c>0) p += 20*traveller.c;
+    if(traveller.pets!=="No") p += 50;
+    return p;
+  }
+
+  function update(){
+    journey.innerHTML = stays.map(s=>`<div class="stay">
+      <img src="https://yaadlife.booorldwide.com/cdn/${s.includes('Pegasus')?'pegasus':s.includes('Van')?'van':s.includes('Dunn')?'dunns':s.includes('Scotchie')?'scotchies':'ricks'}.jpg">
+      ${s}
+    </div>`).join("");
+    if(stays.length===0){
+      primary.textContent = "BOOK YAAD";
+      add.classList.add("hidden");
+    } else {
+      primary.textContent = labels[stages[stage]] || "PAY FI DI YAAD";
+    }
+  }
+
+  primary.onclick = () => {
+    if(stays.length===0){
+      document.getElementById("peoplePanel").classList.add("active");
+    } else if(stage < 4){
+      stage++;
+      const mock = [
+        `Private Van (fits ${traveller.a+traveller.c}${traveller.pets!=="No"?" + pets":""})`,
+        "Dunn’s River (family package)",
+        "Scotchie’s Jerk (pickney seats)",
+        "Rick’s Café Sunset Vybes"
+      ];
+      stays.push(mock[stage-1]);
+    } else {
+      const total = stays.reduce((a,s)=>a + (parseInt(s.match(/\d+/)||[0])[0]||0),0);
+      primary.textContent = `PAY FI DI YAAD → $${total} USD`;
+    }
+    update();
   };
+
+  add.onclick = () => {
+    stays.push(`Next Yaad • $${calcPrice(220)} USD`);
+    update();
+  };
+
+  document.getElementById("mint").onclick = () => {
+    const wc = new WalletConnect.Modal({projectId:"YOUR_WALLETCONNECT_PROJECT_ID"});
+    wc.open();
+  };
+
+  update();
 </script>
 </body>
 </html>
