--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>YaadLife – 1Drop Jamaica Vibe</title>
+  <title>YaadVibe</title>
   <script src="https://cdn.jsdelivr.net/gh/davidshimjs/qrcodejs/qrcode.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -46,13 +46,13 @@
 </head>
 <body>
   <div class="hero">
-    <img src="IMG_0039.jpeg" alt="Jewel Grande Moonrise Suite">
+    <img src="IMG_0039.jpeg">
   </div>
 
   <div class="container">
     <!-- STEP 0 -->
     <div id="step0" class="step active">
-      <h1>How can we help you book your vacation package?</h1>
+      <h1>Can we help you book a vacation package?</h1>
       <button id="start-button">Start Building</button>
       <div class="trustpilot">Trusted by 500+ travelers • <a href="#">Read reviews</a></div>
     </div>
@@ -73,21 +73,21 @@
 
     <!-- STEP 3 -->
     <div id="step3" class="step">
-      <h2>When do you arrive?</h2>
+      <h2>When will you arrive?</h2>
       <input type="date" id="arriveDate">
       <button id="btn-step3">Next</button>
     </div>
 
     <!-- STEP 4 -->
     <div id="step4" class="step">
-      <h2>Which parish will you stay in?</h2>
+      <h2>What parish will you stay in?</h2>
       <div id="parish-options"></div>
       <button id="parish-next" style="display:none">Next → Choose Vibe</button>
     </div>
 
     <!-- STEP 5 -->
     <div id="step5" class="step">
-      <h2>Inland or Coastal vibe?</h2>
+      <h2>What vibe Inland or Coastal?</h2>
       <div class="option-card" data-value="coastal">
         <img src="https://lh3.googleusercontent.com/p/AF1QipO0zN8i5s9x8i2K9v7v8v8v8v8v8v8v8v8v8v8=w500-h500-k-no" alt="Coastal">
         <div class="info"><div class="name">Coastal</div></div>
@@ -108,7 +108,7 @@
 
     <!-- STEP 7 -->
     <div id="step7" class="step">
-      <h2>Need a ride? (optional)</h2>
+      <h2>Need transportion? (optional)</h2>
       <div id="transport-options"></div>
       <button id="btn-transport">Next → Tours</button>
     </div>
@@ -122,10 +122,10 @@
 
     <!-- SUMMARY -->
     <div id="summary" class="step">
-      <h2>Your YaadLife Package</h2>
+      <h2>Your YaadVibe Package</h2>
       <div id="summary-items"></div>
       <div class="total">Total: $<span id="total">0</span> USD</div>
-      <button id="btn-pay">Pay & Generate SBT / QR</button>
+      <button id="btn-pay">Pay & MINT SBT / QR</button>
       <div id="qr-area"></div>
     </div>
   </div>
